fix alignment of group-page toolbar btns

--- a/app/directives/group-page-toolbar/group-page-toolbar.scss
+++ b/app/directives/group-page-toolbar/group-page-toolbar.scss
@@ -12,6 +12,14 @@
   margin-bottom: 10px;
 }
 
+.group-page-feedback-button {
+  margin: 0 !important;
+}
+
+.group-page-admin-button {
+  margin-left: 0 !important;
+}
+
 .group-page__menu-icon {
   @include fontGrande;
   fill: white;
